--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from pademiko.oi/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 10 Aug 2019 17:35:12 GMT -->
+<!-- Mirrored from pademiko.oi/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 29 Aug 2019 02:30:11 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
 <title>Kejari Klaten</title>
@@ -27,7 +27,7 @@
  <link href="site_assets/revolution/css/settings.css" rel="stylesheet" type="text/css">
 <link href="site_assets/revolution/css/layers.css" rel="stylesheet" type="text/css">
   
-<link href='//fonts.googleapis.com/css?family=Dosis:400,300,500,700,800,600' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Dosis:400,300,500,700,800,600' rel='stylesheet' type='text/css'>
 
 
 
@@ -76,7 +76,7 @@
           <div class="tp-caption rev-scroll-btn rs-parallaxlevel-0" id="slide-150-layer-4" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['bottom','bottom','bottom','bottom']" data-voffset="['50','50','50','50']" data-width="0" data-height="150" data-whitespace="nowrap"data-transform_idle="o:1;"data-style_hover="cursor:pointer;"data-transform_in="y:50px;opacity:0;s:1500;e:Power3.easeInOut;" data-transform_out="y:50px;opacity:0;s:1000;s:1000;" data-start="2000" data-splitin="none" data-splitout="none" data-actions='[{"event":"click","action":"scrollbelow","offset":"0px"}]'data-basealign="slide" data-responsive_offset="off" data-responsive="off"style="z-index:9;"> <span><img alt="" src="site_assets/img/mouse.png"> </span> </div>
         </li>
                 <li data-index="rs-3" data-transition="zoomout" data-slotamount="default" data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000"> 
-          <img src="upload/slider/1565356375-b.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg"> 
+          <img src="upload/slider/_1565356375-b.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg"> 
           <div class="tp-caption NotGeneric-Title tp-resizeme rs-parallaxlevel-0" id="slide-148-layer-1" data-x="['right','right','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-40','-40','-40','-40']" data-fontsize="[70','50','50','20]"data-lineheight="[70','50','50','20]"data-width="none"data-height="none"data-whitespace="nowrap"data-transform_idle="o:1;"data-transform_in="x:[105%];z:0;rX:45deg;rY:0deg;rZ:90deg;sX:1;sY:1;skX:0;skY:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:0px;s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1000" data-splitin="chars" data-splitout="none" data-responsive_offset="on" data-elementdelay="0.05" style="z-index: 5; white-space: nowrap; color:#fff;letter-spacing:14px">.</div>
           <div class="tp-caption NotGeneric-SubTitle tp-resizeme rs-parallaxlevel-0" id="slide-149-layer-2" data-x="['right','right','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['15','15','15','15']" data-fontsize="['16','16','16','14']"data-width="none"data-height="none"data-whitespace="nowrap"data-transform_idle="o:1;"data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1500" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 6; white-space: nowrap;font-weight: normal;">.</div>          
           <div class="tp-caption rev-scroll-btn rs-parallaxlevel-0" id="slide-150-layer-4" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['bottom','bottom','bottom','bottom']" data-voffset="['50','50','50','50']" data-width="0" data-height="150" data-whitespace="nowrap"data-transform_idle="o:1;"data-style_hover="cursor:pointer;"data-transform_in="y:50px;opacity:0;s:1500;e:Power3.easeInOut;" data-transform_out="y:50px;opacity:0;s:1000;s:1000;" data-start="2000" data-splitin="none" data-splitout="none" data-actions='[{"event":"click","action":"scrollbelow","offset":"0px"}]'data-basealign="slide" data-responsive_offset="off" data-responsive="off"style="z-index:9;"> <span><img alt="" src="site_assets/img/mouse.png"> </span> </div>
@@ -101,7 +101,7 @@
         <div class="media services-icon-wrap">
           <div class="pull-left"><img class="img-responsive" src="upload/service/seksi-pidum_1565313206-b.jpg" alt=""> </div>
           <div class="media-body">
-            <h3 class="media-heading">SEKSI PIDUM</h3>
+            <h3 class="media-heading">PIDUM</h3>
             <p>Seksi Tindak Pidana Umum mempunyai tugas melaksanakan dan mengendalikan penanganan perkara tindak pidana umum.</p>
           </div>
         </div>
@@ -110,8 +110,8 @@
         <div class="media services-icon-wrap">
           <div class="pull-left"><img class="img-responsive" src="upload/service/seksi-intelijen_1565313129-b.jpg" alt=""> </div>
           <div class="media-body">
-            <h3 class="media-heading">SEKSI INTELIJEN</h3>
-            <p>Seksi Tindak Pidana Umum mempunyai tugas melaksanakan penanganan operasi intelijen dan penerangan hukum.</p>
+            <h3 class="media-heading"> INTELIJEN</h3>
+            <p>Seksi Intelijen mempunyai tugas melaksanakan penanganan operasi intelijen dan penerangan hukum.</p>
           </div>
         </div>
       </div>
@@ -119,8 +119,8 @@
         <div class="media services-icon-wrap">
           <div class="pull-left"><img class="img-responsive" src="upload/service/seksi-pidsus_1565313194-b.jpg" alt=""> </div>
           <div class="media-body">
-            <h3 class="media-heading">SEKSI PIDSUS</h3>
-            <p>Seksi Tindak Pidana Umum mempunyai tugas melaksanakan dan mengendalikan penanganan perkara tindak pidana khusus.</p>
+            <h3 class="media-heading">PIDSUS</h3>
+            <p>Seksi Tindak Pidana Khusus mempunyai tugas melaksanakan dan mengendalikan penanganan perkara tindak pidana khusus.</p>
           </div>
         </div>
       </div>
@@ -128,7 +128,7 @@
         <div class="media services-icon-wrap">
           <div class="pull-left"><img class="img-responsive" src="upload/service/seksi-datun_1565313119-b.jpg" alt=""> </div>
           <div class="media-body">
-            <h3 class="media-heading">SEKSI DATUN</h3>
+            <h3 class="media-heading">DATUN</h3>
             <p>Seksi Perdata dan Tata Usaha Negara mempunyai tugas dan fungsi dalam bidang perdata dan tata usaha negara di daerah hukumnya.</p>
           </div>
         </div>
@@ -137,7 +137,7 @@
         <div class="media services-icon-wrap">
           <div class="pull-left"><img class="img-responsive" src="upload/service/barang-bukti-dan-barang-rampasan_1565314340-b.jpg" alt=""> </div>
           <div class="media-body">
-            <h3 class="media-heading">Barang Bukti Dan Barang Rampasan</h3>
+            <h3 class="media-heading">BARANG BUKTI DAN BARANG RAMPASAN</h3>
             <p>Seksi Pengelolaan Barang Bukti dan Barang Rampasan mempunyai tugas melakukan pengelolaan barang bukti dan barang rampasan yang berasal dari Pidum dan Pidsus. </p>
           </div>
         </div>
@@ -146,7 +146,7 @@
         <div class="media services-icon-wrap">
           <div class="pull-left"><img class="img-responsive" src="upload/service/pembinaan_1565314382-b.jpg" alt=""> </div>
           <div class="media-body">
-            <h3 class="media-heading">Pembinaan</h3>
+            <h3 class="media-heading">PEMBINAAN</h3>
             <p>Seksi Pembinaan melakukan perencanaan program kerja dan anggaran, pengelolaan ketata usahaan kepegawaian.</p>
           </div>
         </div>
@@ -498,7 +498,7 @@
       </div>
        
              <div class="item"> 
-        <img class="img-thumbnail" src="upload/team/jatmiko-raharjo-sh_1565323238-b.jpg" alt="">
+        <img class="img-thumbnail" src="upload/team/jatmiko-raharjo-sh_1567045605-b.jpg" alt="">
 
         <div class="caption">
           <h3>JATMIKO RAHARJO, SH.</h3>
@@ -821,7 +821,7 @@ $('#name').focus(function() {
  </script> 
  
 
-    <form method="POST" action="http://pademiko.oi/contact_send" accept-charset="UTF-8" class="" name="sentMessage" id="contactForm" role="form"><input name="_token" type="hidden" value="vdeDRFlgX7PRNRRdIIyVvncg1I9PQLkQ3E0YpanK">
+    <form method="POST" action="http://pademiko.oi/contact_send" accept-charset="UTF-8" class="" name="sentMessage" id="contactForm" role="form"><input name="_token" type="hidden" value="8i9syNmTsoqzvd3s7hRVHTBTrRAuvFcadERSSZeh">
     <div class="row">
             <div class="col-md-6">      
       <div class="form-group">
@@ -973,5 +973,5 @@ tpj(document).ready(function() {
 </script>
 </body>
 
-<!-- Mirrored from pademiko.oi/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 10 Aug 2019 17:38:17 GMT -->
+<!-- Mirrored from pademiko.oi/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 29 Aug 2019 02:30:11 GMT -->
 </html>
