modify font source

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  <link href="site_assets/revolution/css/settings.css" rel="stylesheet" type="text/css">
 <link href="site_assets/revolution/css/layers.css" rel="stylesheet" type="text/css">
   
-<link href='http://fonts.googleapis.com/css?family=Dosis:400,300,500,700,800,600' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Dosis:400,300,500,700,800,600' rel='stylesheet' type='text/css'>
 
 
 
